manifests/ingestion-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ingestion

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ingestion

  template:
    metadata:
      labels:
        app: ingestion

    spec:
      containers:
        - name: ingestion
          image: axionacrregistry.azurecr.io/axion-ingestion:v100

          ports:
            - containerPort: 8000
